# bridge-sdk-rs

./: .catalog-info.yaml  .gitignore  Cargo.toml  README.md  clippy.toml  dist-workspace.toml
.github/workflows/: security-analysis.yml
bridge-cli/: Cargo.toml  README.md
bridge-cli/src/: defaults.rs  eth_connector_command.rs  fast_bridge_command.rs  main.rs  nep141_connector_command.rs  omni_connector_command.rs  solana_connector_command.rs
bridge-sdk/bridge-clients/btc-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/btc-bridge-client/src/: btc_bridge_client.rs
bridge-sdk/bridge-clients/evm-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/evm-bridge-client/src/: evm_bridge_client.rs
bridge-sdk/bridge-clients/near-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/near-bridge-client/src/: btc_connector.rs  near_bridge_client.rs
bridge-sdk/bridge-clients/solana-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/solana-bridge-client/src/: error.rs  instructions.rs  solana_bridge_client.rs
bridge-sdk/bridge-clients/wormhole-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/wormhole-bridge-client/src/: wormhole_bridge_client.rs
bridge-sdk/btc-utils/: Cargo.toml
bridge-sdk/btc-utils/src/: lib.rs
bridge-sdk/connectors/bridge-connector-common/: Cargo.toml
bridge-sdk/connectors/bridge-connector-common/src/: result.rs
bridge-sdk/connectors/eth-connector/: Cargo.toml
bridge-sdk/connectors/eth-connector/src/: eth_connector.rs
bridge-sdk/connectors/fast-bridge/: Cargo.toml
bridge-sdk/connectors/fast-bridge/src/: fast_bridge.rs
bridge-sdk/connectors/nep141-connector/: Cargo.toml
bridge-sdk/connectors/nep141-connector/src/: nep141_connector.rs
bridge-sdk/connectors/omni-connector/: Cargo.toml
bridge-sdk/connectors/omni-connector/src/: lib.rs  omni_connector.rs
bridge-sdk/connectors/solana-connector/: Cargo.toml
bridge-sdk/connectors/solana-connector/src/: lib.rs  solana_connector.rs
bridge-sdk/crypto-utils/: .catalog-info.yaml  Cargo.toml
bridge-sdk/crypto-utils/src/: lib.rs
bridge-sdk/eth-proof/: Cargo.toml
bridge-sdk/eth-proof/src/: lib.rs  proof_generator.rs
bridge-sdk/eth-proof/src/eth_rpc_client/: types.rs
bridge-sdk/near-light-client-on-eth/: Cargo.toml
bridge-sdk/near-light-client-on-eth/src/: error.rs  near_light_client_on_eth.rs
bridge-sdk/near-rpc-client/: .catalog-info.yaml  Cargo.toml
bridge-sdk/near-rpc-client/src/: near_rpc_client.rs
bridge-sdk/solana-bridge-client/: Cargo.toml
bridge-sdk/solana-bridge-client/src/: error.rs  instructions.rs  lib.rs  solana_bridge_client.rs
legacy-bridge-cli/: .catalog-info.yaml  Cargo.toml
legacy-bridge-cli/src/: defaults.rs  eth_connector_command.rs  fast_bridge_command.rs  main.rs  nep141_connector_command.rs
legacy-bridge-sdk/connectors/bridge-connector-common/: Cargo.toml
legacy-bridge-sdk/connectors/bridge-connector-common/src/: result.rs
legacy-bridge-sdk/connectors/eth-connector/: Cargo.toml
legacy-bridge-sdk/connectors/eth-connector/src/: eth_connector.rs
legacy-bridge-sdk/connectors/fast-bridge/: Cargo.toml
legacy-bridge-sdk/connectors/fast-bridge/src/: fast_bridge.rs
legacy-bridge-sdk/connectors/nep141-connector/: Cargo.toml
legacy-bridge-sdk/connectors/nep141-connector/src/: nep141_connector.rs
legacy-bridge-sdk/eth-proof/: .catalog-info.yaml  Cargo.toml
legacy-bridge-sdk/eth-proof/src/: error.rs  proof_generator.rs
legacy-bridge-sdk/eth-proof/src/eth_rpc_client/: serde.rs  types.rs
legacy-bridge-sdk/near-light-client-on-eth/: .catalog-info.yaml  Cargo.toml
legacy-bridge-sdk/near-rpc-client/: Cargo.toml
legacy-bridge-sdk/near-rpc-client/src/: error.rs
