[workspace]
resolver = "2"
members = [
    "bridge-cli",
    "bridge-sdk/eth-proof",
    "bridge-sdk/near-rpc-client",
    "bridge-sdk/near-light-client-on-eth",
    "bridge-sdk/bridge-clients/solana-bridge-client", 
    "bridge-sdk/bridge-clients/near-bridge-client",
    "bridge-sdk/bridge-clients/evm-bridge-client",
    "bridge-sdk/bridge-clients/wormhole-bridge-client",

    "legacy-bridge-cli",
    "legacy-bridge-sdk/eth-proof",
    "legacy-bridge-sdk/near-rpc-client",
    "legacy-bridge-sdk/near-light-client-on-eth",
    "legacy-bridge-sdk/connectors/nep141-connector",
    "legacy-bridge-sdk/connectors/eth-connector",
    "legacy-bridge-sdk/connectors/bridge-connector-common",
    "legacy-bridge-sdk/connectors/fast-bridge",
]

[workspace.dependencies]
sha3 = "0.10.8"
sha2 = "0.10.8"
borsh = "1.5.1"
thiserror = "2.0.3"
ethers = "2.0.14"
ethers-core = "2.0.14"
ethereum-types = "0.14.1"
tokio = { version = "1.38.0", features = ["full"]}
serde = { version = "1.0" }
hex = "0.4.3"
serde_json = "1.0.117"
reqwest = { version = "0.12", features = ["json"] }
cita_trie = "5.0.1"
rlp = "0.5.2"
hasher = "0.1.4"
lazy_static = "1.4.0"
near-jsonrpc-client = "0.15.1"
near-jsonrpc-primitives = "0.28.0"
near-primitives = "0.28.0"
near-crypto = "0.28.0"
derive_builder = "0.20.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = { version = "0.15" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
near-token = "0.3"
near-contract-standards = "5.5"
omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "4e741af2e233b8764dc56a5205f7bb1155c34b2f" }
solana-sdk = "2.0.13"
solana-client = "2.0.13"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
