[package]
name = "bridge-cli"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/Near-One/bridge-sdk-rs"

[dependencies]
clap.workspace = true
dotenv.workspace = true
tokio.workspace = true
ethers-core.workspace = true
near-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
omni-types.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
omni-connector = { path = "../bridge-sdk/connectors/omni-connector" }
near-bridge-client = { path = "../bridge-sdk/bridge-clients/near-bridge-client" }
evm-bridge-client = { path = "../bridge-sdk/bridge-clients/evm-bridge-client" }
solana-bridge-client = { path = "../bridge-sdk/bridge-clients/solana-bridge-client" }
wormhole-bridge-client = { path = "../bridge-sdk/bridge-clients/wormhole-bridge-client" }
