[package]
name = "btc-bridge-client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc.workspace = true
btc-relayer.workspace = true
bitcoin.workspace = true
bridge-connector-common = { path = "../../connectors/bridge-connector-common" }
serde.workspace = true
serde_json.workspace = true
near-crypto.workspace = true
near-rpc-client = { path = "../../near-rpc-client" }
near-primitives.workspace = true
tokio.workspace = true

[lib]
path = "src/btc_bridge_client.rs"
