[package]
name = "near-bridge-client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh.workspace = true
derive_builder.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
near-token.workspace = true
near-contract-standards.workspace = true
omni-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
near-rpc-client = { path = "../../near-rpc-client" }
bridge-connector-common = { path = "../../connectors/bridge-connector-common" }

[lib]
path = "src/near_bridge_client.rs"
