[package]
name = "solana-bridge-client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder.workspace = true
borsh.workspace = true
sha2.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
mpl-token-metadata.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
thiserror.workspace = true

[lib]
path = "src/solana_bridge_client.rs"
