[package]
name = "wormhole-bridge-client"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
derive_builder.workspace = true
near-primitives.workspace = true
bridge-connector-common = { path = "../../connectors/bridge-connector-common" }

[lib]
path = "src/wormhole_bridge_client.rs"
