[package]
name = "omni-connector"
version = "0.2.8"
edition = "2021"

[dependencies]
sha3.workspace = true
borsh.workspace = true
ethers.workspace = true
derive_builder.workspace = true
hex.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
near-token.workspace = true
near-contract-standards.workspace = true
omni-types.workspace = true
serde_json.workspace = true
tracing.workspace = true
solana-sdk.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }
crypto-utils = { path = "../../crypto-utils" }
bridge-connector-common = { path = "../bridge-connector-common" }

near-bridge-client = { path = "../../bridge-clients/near-bridge-client" }
evm-bridge-client = { path = "../../bridge-clients/evm-bridge-client" }
solana-bridge-client = { path = "../../bridge-clients/solana-bridge-client" }
wormhole-bridge-client = { path = "../../bridge-clients/wormhole-bridge-client" }


[lib]
path = "src/omni_connector.rs"
