[package]
name = "solana-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder.workspace = true
near-primitives.workspace = true
omni-types.workspace = true
serde_json.workspace = true
solana-sdk.workspace = true
tracing.workspace = true
near-rpc-client = { path = "../../near-rpc-client" }
solana-bridge-client = { path = "../../solana-bridge-client" }

