[package]
name = "legacy-bridge-connector-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
ethers.workspace = true
serde_json.workspace = true
legacy-eth-proof = { path = "../../eth-proof" }
legacy-near-rpc-client = { path = "../../near-rpc-client" }
legacy-near-light-client-on-eth = { path = "../../near-light-client-on-eth" }
