[package]
name = "legacy-eth-connector"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3.workspace = true
near-primitives.workspace = true
ethers.workspace = true
thiserror.workspace = true
derive_builder.workspace = true
hex.workspace = true
borsh.workspace = true
near-crypto.workspace = true
tracing.workspace = true
legacy-eth-proof = { path = "../../eth-proof" }
legacy-near-rpc-client = { path = "../../near-rpc-client" }
legacy-near-light-client-on-eth = { path = "../../near-light-client-on-eth" }
legacy-bridge-connector-common = { path = "../bridge-connector-common" }
