[package]
name = "legacy-fast-bridge"
version = "0.2.0"
edition = "2021"

[dependencies]
sha3.workspace = true
derive_builder.workspace = true
near-primitives.workspace = true
borsh.workspace = true
tracing.workspace = true
near-crypto.workspace = true
ethers.workspace = true
base64.workspace = true
hex.workspace = true
serde_json.workspace = true
legacy-eth-proof = { path = "../../eth-proof" }
legacy-bridge-connector-common = { path = "../bridge-connector-common" }
legacy-near-rpc-client = { path = "../../near-rpc-client" }
